src/main/java/br/ufpi/dc/controle/intellisense/grammar/IntellisenseGrammarParser.java
// Generated from D:\mestrado\netbeans\SRSEDITORM\src\intellisense\grammar\IntellisenseGrammar.g4 by ANTLR 4.1

package br.ufpi.dc.controle.intellisense.grammar;
         
import java.util.List;
import java.util.ArrayList;
import java.util.HashMap;



import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import br.ufpi.dc.tools.Constante;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IntellisenseGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, PALAVRA=2, NUMERO=3, SIMBOLOS=4, TRACO=5, TERMINAL=6, VIRGULA=7, 
		MODELO=8, ART=9, ADJ=10, SUBS=11, VERB=12, PREP=13, PRON=14, CONJ=15, 
		ADV=16, NUM=17, PALAVRAESTRANGEIRA=18, SISTEMA=19, DEVE=20, PONTO=21, 
		PERMITIR=22, SEPARADOR=23;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "PALAVRA", "NUMERO", "SIMBOLOS", "'-'", "TERMINAL", 
		"','", "MODELO", "ART", "ADJ", "SUBS", "VERB", "PREP", "PRON", "CONJ", 
		"ADV", "NUM", "PALAVRAESTRANGEIRA", "SISTEMA", "DEVE", "PONTO", "PERMITIR", 
		"SEPARADOR"
	};
	public static final int
		RULE_osistemadeve = 0, RULE_o = 1, RULE_sist = 2, RULE_deve = 3, RULE_det = 4, 
		RULE_det_base = 5, RULE_pos_det = 6, RULE_palavras = 7, RULE_inicio = 8, 
		RULE_p1 = 9, RULE_sv = 10, RULE_f1 = 11, RULE_iteracao_f1 = 12, RULE_iteracao_verbo = 13, 
		RULE_sn_usuario_f1 = 14, RULE_sn_conceito_classe_f1 = 15, RULE_f3 = 16, 
		RULE_iteracao_f3 = 17, RULE_sn_usuario_f4 = 18, RULE_exp_temporal = 19, 
		RULE_sn_conceito_classe_f5 = 20, RULE_sn_conceito_classe_f4 = 21, RULE_sn_usuario_f3 = 22, 
		RULE_sn_conceito_classe_f3 = 23, RULE_conceitos_1 = 24, RULE_conceito_1 = 25, 
		RULE_substantivo = 26, RULE_verbo = 27, RULE_outros_1 = 28;
	public static final String[] ruleNames = {
		"osistemadeve", "o", "sist", "deve", "det", "det_base", "pos_det", "palavras", 
		"inicio", "p1", "sv", "f1", "iteracao_f1", "iteracao_verbo", "sn_usuario_f1", 
		"sn_conceito_classe_f1", "f3", "iteracao_f3", "sn_usuario_f4", "exp_temporal", 
		"sn_conceito_classe_f5", "sn_conceito_classe_f4", "sn_usuario_f3", "sn_conceito_classe_f3", 
		"conceitos_1", "conceito_1", "substantivo", "verbo", "outros_1"
	};

	@Override
	public String getGrammarFileName() { return "IntellisenseGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	    public ArrayList<String> oracoes    = new ArrayList<String>(); 
	    public ArrayList<String> conceitos  = new ArrayList<String>(); 
	    
	    public ArrayList<Integer> listTokenDoConceito   = new ArrayList<Integer>();
	    public ArrayList<String> listConceitoTokenizado = new ArrayList<String>();
	    
	    public HashMap<Integer,ArrayList<String>> conceitosTipados = new HashMap<Integer,ArrayList<String>>();
	   
	    private boolean ok                = true;
	    public  int     tipoFrase         = 0;

	    private String terminal           = ".?!;:,";
	    private String conceito           = "";
	    private String conceitoTokenizado = "";
	    
	    public String oracao            = ""; 
	    public String proximo           = "";
	    public String caminho           = "";
	    public String ultimaPalavra     = "";
	    public String complemento       = "";
	    public String ultimoAtor        = "";
	    public String ultimoVerbo       = "";
	    public String ultimoConceito    = "";
	    public String ultimoComplemento = "";
	    public String numero            = "";
	    public String pontoAntesSenao   = "";
	    public String pontoDepoisSenao  = "";
	    public String temp              = "";
	    
	    
	    private void addPalavra(String palavra){
	      if (palavra!=null){
	           palavra = palavra.toLowerCase();
	           if (terminal.contains(palavra)){                                 
	               oracao = oracao + palavra;
	           }else{
	                 if (oracao.equals("")){
	                     oracao = palavra;
	                 }
	                 else{
	                      oracao = oracao + " " + palavra;
	                     }
	                 }
	           }
	    }
	    
	    private void addConceito(){
	                               
	       if (!conceito.equals("") && (ok) && !conceito.contains("<missing")){
	         conceitos.add(conceito.toLowerCase());
	       }    
	       
	       conceito = "";
	       ok = true;
	    }
	  
	    private void addPalavraAoConceito(String palavra){
	         if (palavra != null){
	             if (conceito.equals("")){
	                 conceito           = palavra;
	                 conceitoTokenizado = palavra;
	             }else{
	                 conceito           = conceito + " " + palavra;   
	                 conceitoTokenizado = conceitoTokenizado+palavra;
	             }
	         }
	    }
	    
	    private void addNumero(String palavra){
	         if (palavra != null){
	             if (numero.equals("")){
	                 numero = palavra;
	             }else{
	                 numero = numero + palavra;   
	             }
	         }
	    }

	   private void addPalavraAoComplemento(String palavra){
	         if (palavra != null){
	             if (complemento.equals("")){
	                 complemento       = palavra;
	                 
	             }else{
	                 complemento           = complemento + " " + palavra;   
	             }
	         }
	    }

	private void addPreposicao(String preposicao){
	         if (!conceito.equals("") ){
	             addPalavraAoConceito(preposicao);
	         }else{
	             ok = false;
	         }
	    } 
	    
	    private void testaConceito(String palavra){
	       if (palavra!=null){
	            if ((palavra.length()>=4 || palavra.toUpperCase().equals(palavra)) && (ok) && !palavra.contains("<missing")){
	                 addPalavraAoConceito(palavra);
	                 ultimaPalavra = palavra;
	            }else{ 
	                  ok = false;
	            }
	       }
	    }

	    private void setProximo(String token,String proximo){
		    if (token!= null && !token.equals("") && !conceito.contains("<missing")){
	                this.proximo = proximo;
	                System.out.print(token    + " --> " + proximo + " | ");
	                caminho = caminho + token + " --> " + proximo + " | ";
	            }
	    }

	   public void adicionaConceitoTipado(Integer tipoConceito){
	       if(!conceito.equals("") && conceitosTipados.containsKey(tipoConceito)){
	          conceitosTipados.get(tipoConceito).add(conceito);
	       }else{
	          if (!conceito.equals("")){
	             conceitosTipados.put(tipoConceito,new ArrayList<String>());
	             conceitosTipados.get(tipoConceito).add(conceito);
	          }
	       }
	       if (!conceito.equals("")){      
	         listTokenDoConceito.add(tipoConceito);
	         listConceitoTokenizado.add(conceitoTokenizado);   
	       }
	   }
	   
	  

	public IntellisenseGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class OsistemadeveContext extends ParserRuleContext {
		public OContext o() {
			return getRuleContext(OContext.class,0);
		}
		public SistContext sist() {
			return getRuleContext(SistContext.class,0);
		}
		public DeveContext deve() {
			return getRuleContext(DeveContext.class,0);
		}
		public OsistemadeveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_osistemadeve; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).enterOsistemadeve(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).exitOsistemadeve(this);
		}
	}

	public final OsistemadeveContext osistemadeve() throws RecognitionException {
		OsistemadeveContext _localctx = new OsistemadeveContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_osistemadeve);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); o();
			setState(59); sist();
			setState(61);
			_la = _input.LA(1);
			if (_la==DEVE) {
				{
				setState(60); deve();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OContext extends ParserRuleContext {
		public TerminalNode ART() { return getToken(IntellisenseGrammarParser.ART, 0); }
		public OContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_o; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).enterO(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).exitO(this);
		}
	}

	public final OContext o() throws RecognitionException {
		OContext _localctx = new OContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_o);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); match(ART);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SistContext extends ParserRuleContext {
		public Token SISTEMA;
		public TerminalNode SISTEMA() { return getToken(IntellisenseGrammarParser.SISTEMA, 0); }
		public SistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).enterSist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).exitSist(this);
		}
	}

	public final SistContext sist() throws RecognitionException {
		SistContext _localctx = new SistContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			conceito =""; conceitoTokenizado="";
			setState(66); ((SistContext)_localctx).SISTEMA = match(SISTEMA);
			setProximo((((SistContext)_localctx).SISTEMA!=null?((SistContext)_localctx).SISTEMA.getText():null),"1 DEVE");
			         testaConceito((((SistContext)_localctx).SISTEMA!=null?((SistContext)_localctx).SISTEMA.getText():null));
			         adicionaConceitoTipado(Constante.SISTEMA);
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeveContext extends ParserRuleContext {
		public Token DEVE;
		public TerminalNode DEVE() { return getToken(IntellisenseGrammarParser.DEVE, 0); }
		public DeveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deve; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).enterDeve(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).exitDeve(this);
		}
	}

	public final DeveContext deve() throws RecognitionException {
		DeveContext _localctx = new DeveContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_deve);
		try {
			enterOuterAlt(_localctx, 1);
			{
			conceito =""; conceitoTokenizado="";
			setState(70); ((DeveContext)_localctx).DEVE = match(DEVE);
			setProximo((((DeveContext)_localctx).DEVE!=null?((DeveContext)_localctx).DEVE.getText():null), "2 verbo");
			              testaConceito((((DeveContext)_localctx).DEVE!=null?((DeveContext)_localctx).DEVE.getText():null));
			              adicionaConceitoTipado(Constante.DEVE);
			             
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DetContext extends ParserRuleContext {
		public Pos_detContext pos_det() {
			return getRuleContext(Pos_detContext.class,0);
		}
		public Det_baseContext det_base() {
			return getRuleContext(Det_baseContext.class,0);
		}
		public DetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_det; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).enterDet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).exitDet(this);
		}
	}

	public final DetContext det() throws RecognitionException {
		DetContext _localctx = new DetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_det);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); det_base();
			setState(75);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(74); pos_det();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Det_baseContext extends ParserRuleContext {
		public TerminalNode PRON() { return getToken(IntellisenseGrammarParser.PRON, 0); }
		public TerminalNode NUM() { return getToken(IntellisenseGrammarParser.NUM, 0); }
		public TerminalNode ART() { return getToken(IntellisenseGrammarParser.ART, 0); }
		public Det_baseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_det_base; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).enterDet_base(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).exitDet_base(this);
		}
	}

	public final Det_baseContext det_base() throws RecognitionException {
		Det_baseContext _localctx = new Det_baseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_det_base);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ART) | (1L << PRON) | (1L << NUM))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pos_detContext extends ParserRuleContext {
		public TerminalNode PRON() { return getToken(IntellisenseGrammarParser.PRON, 0); }
		public TerminalNode NUM() { return getToken(IntellisenseGrammarParser.NUM, 0); }
		public Pos_detContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pos_det; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).enterPos_det(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).exitPos_det(this);
		}
	}

	public final Pos_detContext pos_det() throws RecognitionException {
		Pos_detContext _localctx = new Pos_detContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pos_det);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_la = _input.LA(1);
			if ( !(_la==PRON || _la==NUM) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PalavrasContext extends ParserRuleContext {
		public List<TerminalNode> PREP() { return getTokens(IntellisenseGrammarParser.PREP); }
		public TerminalNode ADV(int i) {
			return getToken(IntellisenseGrammarParser.ADV, i);
		}
		public List<TerminalNode> PRON() { return getTokens(IntellisenseGrammarParser.PRON); }
		public TerminalNode ART(int i) {
			return getToken(IntellisenseGrammarParser.ART, i);
		}
		public TerminalNode PREP(int i) {
			return getToken(IntellisenseGrammarParser.PREP, i);
		}
		public List<TerminalNode> ADV() { return getTokens(IntellisenseGrammarParser.ADV); }
		public List<TerminalNode> NUM() { return getTokens(IntellisenseGrammarParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(IntellisenseGrammarParser.NUM, i);
		}
		public TerminalNode PRON(int i) {
			return getToken(IntellisenseGrammarParser.PRON, i);
		}
		public List<TerminalNode> CONJ() { return getTokens(IntellisenseGrammarParser.CONJ); }
		public List<TerminalNode> ART() { return getTokens(IntellisenseGrammarParser.ART); }
		public TerminalNode CONJ(int i) {
			return getToken(IntellisenseGrammarParser.CONJ, i);
		}
		public PalavrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palavras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).enterPalavras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).exitPalavras(this);
		}
	}

	public final PalavrasContext palavras() throws RecognitionException {
		PalavrasContext _localctx = new PalavrasContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_palavras);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(81);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ART) | (1L << PREP) | (1L << PRON) | (1L << CONJ) | (1L << ADV) | (1L << NUM))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					} 
				}
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InicioContext extends ParserRuleContext {
		public P1Context p1() {
			return getRuleContext(P1Context.class,0);
		}
		public F3Context f3() {
			return getRuleContext(F3Context.class,0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntellisenseGrammarListener ) ((IntellisenseGrammarListener)listener).exitInicio(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inicio);
		try {
			setState(89);
